--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,7 @@
 
 <app-toolbar ></app-toolbar>
 
-<br>
-<table align="center">
+<!-- <table align="center">
     <tr>
         <td>
             <ngb-carousel>
@@ -56,7 +55,33 @@
             </ngb-carousel>
         </td>
     </tr>
-</table>
+</table> -->
+
+<section id="hero" class="hero">
+  <div class="info d-flex align-items-center" style="margin-top: 461px;">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-6 text-center">
+          <h2 data-aos="fade-down">{{ "HOME.TEXT_1" | translate }}</h2>
+            <p>{{ "HOME.TEXT_2" | translate }}</p>
+          <p data-aos="fade-up">{{ "HOME.TEXT_3" | translate }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+    <div class="carousel-item active" style="background-image: url(./assets/imagenes/mundial2.png)"></div>
+    <div class="carousel-item" style="background-image: url(./assets/imagenes/carro.jpg)"></div>
+    <div class="carousel-item" style="background-image: url(./assets/imagenes/vehiculo2.jpg)"></div>
+    <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+    </a>
+    <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+    </a>
+  </div>
+</section>
+
 <br>
 <section>
     <div class="bg-image">
