--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -167,17 +167,17 @@
                   <div class="col-sm-12 col-md-4">
                     <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Marca</label>
-                        <div style="background: fixed">
+                        <div >
                         <ng-autocomplete  [data]="marcaList" [searchKeyword]="keyword" 
                                         placeholder="Seleccionar Marca" (selected)='getModeloData($event)'
                                         [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
                         </ng-autocomplete>
                     
-                        <ng-template #itemTemplate let-item  [ngStyle]="{'background': 'fixed'}">
+                        <ng-template #itemTemplate let-item >
                             <a [innerHTML]="item.value"></a>
                         </ng-template>
                     
-                        <ng-template #notFoundTemplate let-notFound  [ngStyle]="{'background': 'fixed'}">
+                        <ng-template #notFoundTemplate let-notFound  >
                             <div [innerHTML]="notFound"></div>
                         </ng-template>
                       </div>
@@ -205,11 +205,11 @@
                                         [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
                         </ng-autocomplete>
                     
-                        <ng-template #itemTemplate let-item  [ngStyle]="{'background': 'fixed'}">
+                        <ng-template #itemTemplate let-item >
                             <a [innerHTML]="item.value"></a>
                         </ng-template>
                     
-                        <ng-template #notFoundTemplate let-notFound  [ngStyle]="{'background': 'fixed'}">
+                        <ng-template #notFoundTemplate let-notFound >
                             <div [innerHTML]="notFound"></div>
                         </ng-template>
                       </div>
@@ -236,11 +236,11 @@
                                         [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
                         </ng-autocomplete>
                     
-                        <ng-template #itemTemplate let-item  [ngStyle]="{'background': 'fixed'}">
+                        <ng-template #itemTemplate let-item >
                             <a [innerHTML]="item.value"></a>
                         </ng-template>
                     
-                        <ng-template #notFoundTemplate let-notFound  [ngStyle]="{'background': 'fixed'}">
+                        <ng-template #notFoundTemplate let-notFound >
                             <div [innerHTML]="notFound"></div>
                         </ng-template>
                       </div>
