--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,4 +1,10 @@
 
 .navbar>ul>li{
-  padding: 7px 0px 0 13px;;
+  padding: 7px 0px 0 13px;
+
 }
+
+
+/* .navbar .dropdown ul {
+  overflow: scroll;
+} */
