--- a/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.html
+++ b/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.html
@@ -1,1 +1,155 @@
-<p>payment-record-detail works!</p>
+<app-toolbar ></app-toolbar>
+<div class="container">
+    <div class="row mt-5" *ngIf="alert.show">
+        <div class="col-sm-12 col-md-6 mx-auto">
+            <ngb-alert *ngIf="alert.show" [type]="alert.type" (close)="alert.show = false;">{{ alert.message | translate }}</ngb-alert>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-sm-12">
+            <div class="parent">
+                <div class="div1"> 
+                    <div class="card" style="margin-left: -93px;">
+                        <div class="card-header company-card-header">
+                            <div class="row">
+                                <div class="col-6" style="font-weight: bolder;">
+                                    Proceso de Factura
+                                </div>
+                                <div class="col-6">
+                                    <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="onSubmit(payment_form.value)"  *ngIf="showSaveButton">
+                                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                        Guardar
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <form [formGroup]="payment_form">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="form-group">
+                                                <label>Cliente</label>
+                                                <input type="text" formControlName="xcliente" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xcliente').errors }" cols="30" rows="2">
+                                                <div *ngIf="submitted && payment_form.get('xcliente').errors"  class="invalid-feedback">
+                                                    <div *ngIf="payment_form.get('xcliente').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="form-group">
+                                                <label>Número de Factura</label>
+                                                <input type="number" formControlName="nfactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('nfactura').errors }" cols="30" rows="2">
+                                                <div *ngIf="submitted && payment_form.get('nfactura').errors"  class="invalid-feedback">
+                                                    <div *ngIf="payment_form.get('nfactura').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="form-group">
+                                                <label>Número de Control</label>
+                                                <input type="text" formControlName="ncontrol" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('ncontrol').errors }" cols="30" rows="2">
+                                                <div *ngIf="submitted && payment_form.get('ncontrol').errors"  class="invalid-feedback">
+                                                    <div *ngIf="payment_form.get('ncontrol').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="form-group">
+                                                <label>Fecha de Factura</label>
+                                                <input type="date" formControlName="ffactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('ffactura').errors }" cols="30" rows="2">
+                                                <div *ngIf="submitted && payment_form.get('ffactura').errors"  class="invalid-feedback">
+                                                    <div *ngIf="payment_form.get('ffactura').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="form-group">
+                                                <label>Fecha de Recepción</label>
+                                                <input type="date" formControlName="frecepcion" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('frecepcion').errors }" cols="30" rows="2">
+                                                <div *ngIf="submitted && payment_form.get('frecepcion').errors"  class="invalid-feedback">
+                                                    <div *ngIf="payment_form.get('frecepcion').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="form-group">
+                                                <label>Fecha de Vencimiento</label>
+                                                <input type="date" formControlName="fvencimiento" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('fvencimiento').errors }" cols="30" rows="2">
+                                                <div *ngIf="submitted && payment_form.get('fvencimiento').errors"  class="invalid-feedback">
+                                                    <div *ngIf="payment_form.get('fvencimiento').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ggh -->
+                <!-- <div class="div2">
+                </div>-->
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+
+<footer >    
+    <div class="container">       
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="footer-widget">
+            <h3 style="margin-right: 110px;">Horario</h3>
+            <div class="footer-widget-content">
+              <div class="open-time ">
+                  <ul class="opening-time">
+                    <li><span></span><h6>Horario disponible de Lunes a Viernes</h6>
+                    <li><span></span><h6><strong>A partir de :</strong> 8am - 4pm</h6>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-widget" style="margin-top: 50px;text-align: -webkit-center;">
+            <h6 >Copyright© CompuAmerica 2022.</h6>
+            <div class="footer-widget-content">
+                <br>
+                <h6>6 C. Negrín, Caracas 1050, Frente al CC. El Recreo. Distrito Capital</h6>
+                <div class="footer-social">
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-widget">
+            <h3>Redes Sociales</h3>
+            <div class="footer-widget-content" style=" text-align: -webkit-center;">
+              <div class="images-gellary">
+                <p></p>
+                <table style="margin-left: 25px;">
+                  <tr>
+                    <td>
+                      <ul>
+                        <li ><a href="https://www.facebook.com/Mundial Autos-Sas-107360681039695" target="_blank"><img  style="border-radius: 6px;background-color: #ffffff7d;" src="./assets/imagenes/facebook.png" alt="Instagram 01" width="40px" height="40px"></a></li>
+                        <br>
+                        <li><a href="https://www.instagram.com/Mundial Autoss.vzla/?hl=es-la" target="_blank"><img style="background-color: #ffffff7d;border-radius: 15px;" src="./assets/imagenes/instagram.png" alt="Instagram 02" width="40px" height="40px"></a></li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li style="border-radius: 15px;"><a  href="https://twitter.com/Mundial Autos" target="_blank"><img style="background-color: #ffffff7d;" src="./assets/imagenes/twitter.png" alt="Instagram 01" width="40px" height="40px"></a></li>
+                        <br>
+                        <li style="border-radius: 15px;"><a href="https://co.linkedin.com/company/linkedin-com-company-Mundial Autossas" target="_blank"><img  style="background-color: #ffffff7d"src="./assets/imagenes/linkedin.png"  width="40px" height="40px"></a></li>
+                      </ul>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
