--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -573,7 +573,7 @@
                 </div>
                 <div class="col-sm-12 mt-2" *ngIf="bpagarubii">
                   <div class="button">
-                      <button id="ubiiboton" (click)="onSubmit(search_form.value)"></button>
+                      <button id="ubiiboton" (click)="onSubmitUbii(search_form.value)"></button>
                   </div> 
               </div>
                 <div class="button">
