--- a/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.html
+++ b/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.html
@@ -9,7 +9,7 @@
         <div class="col-sm-12">
             <div class="parent">
                 <div class="div1"> 
-                    <div class="card" style="margin-left: -93px;">
+                    <div class="card" style= "width: 360px">
                         <div class="card-header company-card-header">
                             <div class="row">
                                 <div class="col-6" style="font-weight: bolder;">
@@ -26,7 +26,7 @@
                         <div class="card-body">
                             <form [formGroup]="payment_form">
                                     <div class="row">
-                                        <div class="col-4">
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Cliente</label>
                                                 <input type="text" formControlName="xcliente" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xcliente').errors }" cols="30" rows="2">
@@ -35,7 +35,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Número de Factura</label>
                                                 <input type="number" formControlName="nfactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('nfactura').errors }" cols="30" rows="2">
@@ -44,7 +44,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Número de Control</label>
                                                 <input type="text" formControlName="ncontrol" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('ncontrol').errors }" cols="30" rows="2">
@@ -53,7 +53,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Fecha de Factura</label>
                                                 <input type="date" formControlName="ffactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('ffactura').errors }" cols="30" rows="2">
@@ -62,7 +62,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Fecha de Recepción</label>
                                                 <input type="date" formControlName="frecepcion" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('frecepcion').errors }" cols="30" rows="2">
@@ -71,7 +71,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Fecha de Vencimiento</label>
                                                 <input type="date" formControlName="fvencimiento" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('fvencimiento').errors }" cols="30" rows="2">
@@ -87,8 +87,78 @@
                 </div>
 
                 <!-- ggh -->
-                <!-- <div class="div2">
-                </div>-->
+                <div class="div2">
+                    <div class="row mt-5" *ngIf="bordenservicio">
+                      <div class="col-sm-12">
+                          <div class="card" style="margin-top: -48px;margin-left: -215px;">
+                              <div class="card-header company-card-header">
+                                  <div class="row">
+                                      <div class="col-6">
+                                          Ordenes de Servicios
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="card-body">
+                                  <div class="container">
+                                    <ag-grid-angular style="width: 100%; height: 250px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                                      <ag-grid-column headerName="Código" field="corden" [width]="100" [sortable]="true"></ag-grid-column>
+                                      <ag-grid-column headerName="Nombre" field="xnombre" [width]="350" [sortable]="true"></ag-grid-column>
+                                      <ag-grid-column headerName="Monto de Factura" field="mmontofactura" [width]="200" [sortable]="true"></ag-grid-column>
+                                      <ag-grid-column headerName="Tipo de Pagador" field="xtipopagador" [width]="130" [sortable]="true"></ag-grid-column>
+                                  </ag-grid-angular>
+                                  </div>
+                              </div>
+                              <br>
+                                <form [formGroup]="payment_form" class="parent">
+                                    <div class="col-sm-10">
+                                        <div class="form-group">
+                                            <label style="font-weight: bolder;text-align: center;">Sumatoria de Factura</label>
+                                            <input type="text" formControlName="msumafactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('msumafactura').errors }" style="text-align: center;">
+                                            <div *ngIf="submitted && payment_form.get('msumafactura').errors"  class="invalid-feedback">
+                                                <div *ngIf="payment_form.get('msumafactura').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row mt-5" *ngIf="bfiniquito">
+                    <div class="col-sm-12">
+                        <div class="card" style="margin-top: -48px;margin-left: -215px;">
+                            <div class="card-header company-card-header">
+                                <div class="row">
+                                    <div class="col-6">
+                                        Finiquitos
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <div class="container">
+                                  <ag-grid-angular style="width: 100%; height: 250px;" class="ag-theme-alpine" [rowData]="settlementList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                                    <ag-grid-column headerName="Código" field="cfiniquito" [width]="100" [sortable]="true"></ag-grid-column>
+                                    <ag-grid-column headerName="Nombre" field="xnombre" [width]="350" [sortable]="true"></ag-grid-column>
+                                    <ag-grid-column headerName="Monto de Factura" field="mmontofactura" [width]="200" [sortable]="true"></ag-grid-column>
+                                    <ag-grid-column headerName="Tipo de Pagador" field="xtipopagador" [width]="130" [sortable]="true"></ag-grid-column>
+                                </ag-grid-angular>
+                                </div>
+                            </div>
+                            <br>
+                              <form [formGroup]="payment_form" class="parent">
+                                  <div class="col-sm-10">
+                                      <div class="form-group">
+                                          <label style="font-weight: bolder;text-align: center;">Sumatoria de Factura</label>
+                                          <input type="text" formControlName="msumafactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('msumafactura').errors }" style="text-align: center;">
+                                          <div *ngIf="submitted && payment_form.get('msumafactura').errors"  class="invalid-feedback">
+                                              <div *ngIf="payment_form.get('msumafactura').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </form>
+                        </div>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
