se coloco grua en corredores

--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -417,6 +417,25 @@
                     </div>
                   </div>
                   <div class="col-md-4 mb-4 pb-2 mb-md-0 pb-md-0">
+                    <div class="form-check form-switch">
+                      <label style="margin-left: 12px;margin-top: 13px;">¿Posee Grúa?</label>
+                      <div class="row">
+                        <p class="col-sm-2 col-md-4">No</p>
+                        <input type="checkbox" formControlName="bgrua" class="form-check-input" [ngClass]="{ 'is-invalid' : submitted && search_form.get('bgrua').errors }" style="margin-left: 59px;" (change)="OperatioValueGrua()"> 
+                        <p class="col-sm-2 col-md-4" style="margin-left: 26px;">Si</p>
+                     </div>
+                      <div *ngIf="submitted && search_form.get('bgrua').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('bgrua').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDVEHICLEDAMAGE" | translate }}</div>
+                      </div>
+                  </div>
+                  </div>
+                  <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0" *ngIf="grua">
+                    <div class="form-outline">
+                      <label class="form-label" for="form3Examplev5">Monto Grúa</label>
+                      <input type="number" formControlName="mgrua" class="form-control form-control-lg" readonly=readonly [ngClass]="{ 'is-invalid' : submitted && search_form.get('mgrua').errors }" />
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-4 pb-2 mb-md-0 pb-md-0">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev5">Corredor</label>
                       <select formControlName="ccorredor" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ccorredor').errors } ">
