menu modification and redirection correction and validate place

--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -146,12 +146,12 @@
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev3">Placa</label>
-                      <input type="text" formControlName="xplaca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }" />
+                      <input type="text" formControlName="xplaca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }" (change)="OperatioValidationPlate()" />
                       <div *ngIf="submitted && search_form.get('xplaca').errors" class="invalid-feedback">
                         <div *ngIf="search_form.get('xplaca').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
-                  </div>
+                </div>
                   <!-- <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev2">Marca</label>
