--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -7,7 +7,7 @@
    </div>
 </div>
 <section>
-  <div class="container py-5 ">
+    <div class="container py-5 " style="position: sticky;z-index: -4; ">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div >
         <div  class="card card-registration card-registration-2" style="border-radius: 15px;">
