--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -149,7 +149,7 @@
                     <div class="col-md-4 mb-4 pb-2">
                       <div class="form-outline">
                         <label class="form-label required" for="form3Examplev3">Placa</label>
-                        <input type="text" formControlName="xplaca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }" />
+                        <input type="text" formControlName="xplaca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }" (change)="OperatioValidationPlate()" />
                         <div *ngIf="submitted && search_form.get('xplaca').errors" class="invalid-feedback">
                           <div *ngIf="search_form.get('xplaca').errors.required">Se requiere completar el campo</div>
                         </div>
