--- a/src/app/subscription/policy-cancellations/policy-cancellations.component.html
+++ b/src/app/subscription/policy-cancellations/policy-cancellations.component.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 104px;" class="ag-theme-alpine" [rowData]="fleetContractList" [pagination]="false" [paginationPageSize]="1" rowSelection="single">
+                        <ag-grid-angular style="width: 100%; height: 150px;" class="ag-theme-alpine" [rowData]="fleetContractList" [pagination]="false" [paginationPageSize]="1" rowSelection="single" (rowClicked)="rowClicked($event)">
                             <ag-grid-column headerName="N° Contrato" field="ccontratoflota" [width]="115" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Marca" field="xmarca" [width]="150" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Modelo" field="xmodelo" [width]="160" [sortable]="true" [resizable]="true"></ag-grid-column>
