--- a/src/app/subscription/fleet-contract-management/fleet-contract-management-index/fleet-contract-management-index.component.html
+++ b/src/app/subscription/fleet-contract-management/fleet-contract-management-index/fleet-contract-management-index.component.html
@@ -77,7 +77,7 @@
                                     </div>
                                 </div>
                             </div> -->
-                            <div class="col-sm-12 col-md-4">
+                            <!--<div class="col-sm-12 col-md-4">
                                 <div class="form-outline">
                                     <label class="form-label" for="form3Examplev5">Recibo</label>
                                     <ng-autocomplete  [data]="receiptList" [searchKeyword]="keyword" 
@@ -93,7 +93,7 @@
                                         <div [innerHTML]="notFound"></div>
                                     </ng-template>
                                 </div>
-                            </div> 
+                            </div> -->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "SUBSCRIPTION.FLEETCONTRACTSMANAGEMENT.PLATE" | translate }}</label>
@@ -123,12 +123,40 @@
                         <ag-grid-angular style="width: 100%; height: 104px;" class="ag-theme-alpine" [rowData]="fleetContractList" [pagination]="false" [paginationPageSize]="1" rowSelection="single" (rowClicked)="rowClicked($event)">
                             <ag-grid-column headerName="N° Recibo" field="crecibo" [width]="115" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="N° Contrato" field="ccontratoflota" [width]="115" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Póliza" field="xpoliza" [width]="120" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Marca" field="xmarca" [width]="150" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Modelo" field="xmodelo" [width]="160" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Versión" field="xversion" [width]="274" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Placa" field="xplaca" [width]="140" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Estatus" field="xestatusgeneral" [width]="140" [sortable]="true" [resizable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Póliza" field="xpoliza" [width]="130" [sortable]="true" [resizable]="true"></ag-grid-column>
+                        </ag-grid-angular>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5 mb-5">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header company-card-header">
+                    <div class="row">
+                        <div class="col-6">
+                            Información de los recibos de la póliza
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="container">
+                        <ag-grid-angular style="width: 100%; height: 416px;" class="ag-theme-alpine" [rowData]="receiptList" [pagination]="false" [paginationPageSize]="9" [columnDefs]="columnDefs">
+                            <!--<ag-grid-column headerName="N°" field="nconsecutivo" [width]="55" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="N° Recibo" field="xrecibo" [width]="115" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="N° Contrato" field="ccontratoflota" [width]="115" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="N° Placa" field="xplaca" [width]="140" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Inicio Vigencia" field="fdesde_rec" [width]="150" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Fin Vigencia" field="fhasta_rec" [width]="160" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Prima Total Recibo (USD)" field="mprima_anual" [width]="220" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Estatus" field="xstatus" [width]="140" [sortable]="true" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Descargar" cellClass="ag-download-column" field="xdescargar" [width]="130" [sortable]="true" [resizable]="true" [onCellClicked]="downloadReceipt"></ag-grid-column> -->
                         </ag-grid-angular>
                     </div>
                 </div>
