[fix]: Deleting the Receipt Dates and adding the Policy Effective Dates

--- a/src/app/subscription/fleet-contract-management/fleet-contract-management-detail/fleet-contract-management-detail.component.html
+++ b/src/app/subscription/fleet-contract-management/fleet-contract-management-detail/fleet-contract-management-detail.component.html
@@ -122,7 +122,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <!--<div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>Fecha Inicial de la vigencia del Recibo</label>
                                     <input type="date" formControlName="fdesde_rec" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('fdesde_rec').errors }">
@@ -139,7 +139,7 @@
                                         <div *ngIf="detail_form.get('fhasta_rec').errors.required">{{ "SUBSCRIPTION.FLEETCONTRACTSMANAGEMENT.REQUIREDDATEUNTILRECEIPT" | translate }}</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "SUBSCRIPTION.FLEETCONTRACTSMANAGEMENT.ISSUANCEBRANCH" | translate }}</label>
